# lazy-loader

./: .gitignore  README.md  ReadMe.md  pyproject.toml
src/lazy_loader/: __init__.py  analyzer.py  chunker.py  decorators.py  importer.py  loader.py
