[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-loader-lib"
version = "0.1.0"
authors = [
    { name="Siddhant Gupta", email="siddhant051231@gmail.com" }
]
description = "A smart topological chunking compiler and lazy loader for Python modules."
readme = "ReadMe.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "lz4>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/lazy-loader-lib"

[tool.setuptools.packages.find]
where = ["src"]