[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-loader-lib"
version = "0.1.0"
authors = [
    { name="Siddhant Gupta", email="siddhant051231@gmail.com" }
]
description = "A smart topological chunking compiler and lazy loader for Python modules."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "lz4>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SiddhantGupta3112/lazy-loader"

[tool.setuptools.packages.find]
where = ["src"]

# Force setuptools to ignore the root tests/ folder completely in all archives
[tool.setuptools.exclude-package-data]
"*" = ["tests*", "tests/**/*"]